@@ -1,3 +1,5 @@
+24/10/2020
+-   New automation: Auto Warp (requires card)
 -   Decreased exp shop "computing regeneration" bonus from 10% to 2%
 -   Fixed save not loading in some cases
 
